# demo-ai-assistant-with-tools

./: .env.sample  .gitignore  README.md  pyproject.toml
src/: step1.py  step2.py  step3.py  step4.py  step5.py  step6.py  step7.py  step8.py  step9.py
src/utils/: hf_model.py
src/utils/prices/: manifest.yml  tool.py
src/utils/search/: manifest.yml  tool.py
